NXBT-912 fixup pom